# bluepad32

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  duplicates_report.md
.github/workflows/: clang-format-check.yaml  esp-idf-4.4.yaml  esp-idf-latest.yaml  pico-sdk-cmake.yaml  posix.yaml
docs/: firmware_setup.md  getting_started.md  plat_esp32.md
examples/esp32/: README.md  sdkconfig.defaults
src/: sdkconfig.defaults
src/components/bluepad32/: uni_hid_device.c  uni_mouse_quadrature.c
src/components/bluepad32/bt/: uni_bt.c  uni_bt_bredr.c
src/components/bluepad32/include/: uni_hid_device.h
src/components/bluepad32/parser/: uni_hid_parser_steam.c
src/components/bluepad32/platform/: uni_platform_unijoysticle.c
src/main/: CMakeLists.txt
tests/: CMakeLists.txt  test_uni_hid_device.c  test_uni_hid_parser.c
